fix scroll on comments so it only appears if they overflow

--- a/client/src/components/Home/HomePage/Post/PostData/PostData.css
+++ b/client/src/components/Home/HomePage/Post/PostData/PostData.css
@@ -64,7 +64,7 @@
 }
 
 .comment:hover {
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 .post__comment__input {
